force-app/main/default/objects/DOZISF__ZoomInfo_Scoop__c/DOZISF__ZoomInfo_Scoop__c.object-meta.xml
<CustomObject>
    <label>ZoomInfo Scoop</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>ZoomInfo Scoop Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZoomInfo Scoops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>