force-app/main/default/objects/DOZISF__ZoomInfo_Scoop__c/fields/DOZISF__Account__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ZoomInfo Scoops</relationshipLabel>
    <relationshipName>ZoomInfo_Scoops</relationshipName>
    <type>Lookup</type>
</CustomField>