force-app/main/default/objects/DOZISF__ZoomInfo_Scoop__c/fields/DOZISF__Contact__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ZoomInfo Scoops</relationshipLabel>
    <relationshipName>ZoomInfo_Scoops</relationshipName>
    <type>Lookup</type>
</CustomField>