force-app/main/default/objects/DOZISF__ZoomInfo_Scoop__c/fields/DOZISF__Date_Published__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Date_Published__c</fullName>
    <label>Date Published</label>
    <type>Date</type>
</CustomField>