force-app/main/default/objects/DOZISF__ZoomInfo_Scoop__c/fields/DOZISF__Description__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Description__c</fullName>
    <label>Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>