force-app/main/default/objects/DOZISF__ZoomInfo_Scoop__c/fields/DOZISF__First_Name__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__First_Name__c</fullName>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>