force-app/main/default/objects/DOZISF__ZoomInfo_Scoop__c/fields/DOZISF__Job_Title__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Job_Title__c</fullName>
    <label>Job Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>