force-app/main/default/objects/DOZISF__ZoomInfo_Scoop__c/fields/DOZISF__Last_Name__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Last_Name__c</fullName>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>