force-app/main/default/objects/DOZISF__ZoomInfo_Scoop__c/fields/DOZISF__Lead__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>ZoomInfo Scoops</relationshipLabel>
    <relationshipName>ZoomInfo_Scoops</relationshipName>
    <type>Lookup</type>
</CustomField>