force-app/main/default/objects/DOZISF__ZoomInfo_Scoop__c/fields/DOZISF__Scoop_ID__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Scoop_ID__c</fullName>
    <label>Scoop ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>