force-app/main/default/objects/DOZISF__ZoomInfo_Scoop__c/fields/DOZISF__Topics__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Topics__c</fullName>
    <label>Topics</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>