force-app/main/default/objects/DOZISF__ZoomInfo_Scoop__c/fields/DOZISF__ZoomInfo_Id__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__ZoomInfo_Id__c</fullName>
    <externalId>true</externalId>
    <label>ZoomInfo Contact Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>